<resources>
    <string name="url">http://192.168.0.88/TaskTop/api/</string>
    <string name="app_name">Task Top</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="salvarSenha">Salvar Senha</string>
    <string name="entrar">Entrar</string>
    <string name="recuperarSenha">Esqueceu sua senha? Clique Aqui</string>
    <string name="agenda">Agenda</string>
    <string name="entrada">Entrada</string>
    <string name="saida">Saida</string>
    <string name="alerta">Alerta</string>
    <string name="servico">Serviço</string>
    <string name="equipamentos">Estoque</string>
    <string name="equipamento">Equipamento</string>
    <string name="material">Material</string>
    <string name="usuario">Usuário</string>
    <string name="data">Data</string>
    <string name="hora">Hora</string>
    <string name="repeticao">Repetir em</string>
    <string name="dias">dias</string>
    <string name="descricao">Descrição</string>
    <string name="funcionario">Funcionário Encarregado</string>
    <string name="funcionarionovo">Novo Funcionário Encarregado</string>
    <string name="criadopor">Criado por</string>
    <string name="iniciadoem">Iniciado em</string>
    <string name="finalizadoem">Finalizado em</string>
    <string name="movimentar">Movimentar Estoque</string>
    <string name="adicionar">Adicionar</string>
    <string name="qtde">Qtde</string>
</resources>
