<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?android:attr/actionBarSize"
        android:theme="@style/AppTheme.ToolBarStyle">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/servico"
            android:textAllCaps="true"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/botoes_layout"
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/supervisor_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/supervisor_edittext"
            android:text="@string/criadopor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/supervisor_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/descricao_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/descricao_edittext"
            android:text="@string/servico"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/descricao_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/inicio_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@id/inicio_edittext"
                android:text="@string/iniciadoem"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/termino_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@id/final_edittext"
                android:text="@string/finalizadoem"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:id="@+id/inicio_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/final_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPersonName" />
        </LinearLayout>

        <android.support.design.widget.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorColor="@color/colorPrimaryDark"
            app:tabSelectedTextColor="@color/colorPrimaryDark"
            app:tabTextColor="@color/colorPrimary">

            <android.support.design.widget.TabItem
                android:id="@+id/equipamento_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equipamento" />

            <android.support.design.widget.TabItem
                android:id="@+id/material_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/material" />
        </android.support.design.widget.TabLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/tab_viewer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/botoes_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:weightSum="3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/iniciar_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:background="@drawable/background_alert"
                android:contentDescription="@string/iniciadoem"
                android:onClick="iniciar"
                app:srcCompat="@drawable/ic_play" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/movimentarestoque_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:background="@drawable/background_neutral"
                android:contentDescription="@string/movimentar"
                android:onClick="movimentarEstoque"
                app:srcCompat="@drawable/ic_import_export" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/finalizar_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:background="@drawable/background_good"
                android:contentDescription="@string/finalizadoem"
                android:onClick="finalizar"
                app:srcCompat="@drawable/ic_check" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>